Moved all the release pipeline to GitHub action. Added MSI and MSIX creation with code sign through Azure. Removed javafx .jar dependencies in release in favor of jdk+fx (a jdk with javafx modules)